hphp/hack/test/typecheck/lambda/ternary_within_lambda_within_ternary.php.exp
File "ternary_within_lambda_within_ternary.php", line 10, characters 8-73:
Nested ternary expressions inside ternary expressions are ambiguous. Please add parentheses (Parsing[1002])
