hphp/hack/test/typecheck/lambda/ternary_within_lambda_within_ternary.php
<?hh

function foo(): void {
}

function bar(): void {
}

function testLambdaExpression(bool $cond, bool $cond2): void {
  $l = $cond
    ? () ==> foo()
    : () ==>
      $cond2 ? foo() : bar();
  $l();
}
